edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__bullet_multiple_plain_80.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
  - First item
  - Second item
  - Third item
