edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_components_task_view.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--- Task Details
      ID: cas-10a4
   Title: Build testing harness
  Status: in_progress
Priority: P1

Dependencies
- cas-277c (closed)
- cas-737b (blocked)
