edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_doctor_output_plain_40.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--- CAS Doctor ---

Store
Database: /home/user/.cas/store.db
[OK] Store connected

----------------------------------------
[INFO] All systems operational
