edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_key_hints_bar.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--------------------------------------------------------------------------------
[q] Quit
[j/k] Navigate
[Enter] Select
[?] Help
