edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_task_list_plain.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--- Tasks ---

ID: cas-abc1
Title: Build testing harness
Status: in_progress
Priority: P1

--------------------------------------------------------------------------------

ID: cas-def2
Title: Migrate doctor command
Status: open
Priority: P2

--------------------------------------------------------------------------------
[INFO] 2 tasks shown
