edgebench/tasks/rust_multicrate_reconstruction/environment/workspace/agent-start/cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__field_long_value.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
Description: A very long description that exceeds the terminal width
